--- a/templates/serie/search.html.twig
+++ b/templates/serie/search.html.twig
@@ -5,17 +5,17 @@
     {{ encore_entry_script_tags('search') }}
 {% endblock %}
 
-{% block body_id 'blog_search' %}
+{% block body_id 'serie_search' %}
 
 {% block main %}
-    <form action="{{ path('blog_search') }}" method="get">
+    <form action="{{ path('serie_search') }}" method="get">
         <div class="form-group">
             <input name="q"
                    class="form-control search-field"
-                   placeholder="{{ 'post.search_for'|trans }}"
+                   placeholder="{{ 'serie.search_for'|trans }}"
                    autocomplete="off"
                    autofocus
-                   data-no-results-message="{{ 'post.search_no_results'|trans }}"
+                   data-no-results-message="{{ 'serie.search_no_results'|trans }}"
             >
         </div>
     </form>
